# docling-binary

./: .gitignore  README.md  convert.py  debug.py  flow-docling.spec  main.py  pyproject.toml
.github/workflows/: build-docling.yml
hooks/: hook-easyocr.py
