[project]
name            = "docling-binary"
version         = "0.1.0"
description     = ""
readme          = "README.md"
requires-python = ">=3.11,<3.13"
authors = [
    { name = "Felix Schultz (TM9657 GmbH)", email = "felix.schultz@good-co.de" },
]


[tool.poetry.dependencies]
docling     = ">=2.49.0,<3.0.0"
pyinstaller = ">=6.15.0,<7.0.0"
uvicorn     = ">=0.35.0,<0.40.0"
fastapi     = ">=0.115.14,<0.120.0"
einops      = ">=0.8.1,<1.0.0"
numpy       = ">=2.3.1,<3.0.0"
python-multipart = "^0.0.20"
easyocr = "^1.7.2"

# CPU-only PyTorch / TorchVision, 3 cases:
torch = [
  # MacOS
  { version = "==2.2.2", source="pytorch-pypy", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
  { version = "^2.7", source="pytorch-pypy", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" },
  
  # Linux
  { version = "^2.7", source  = "pytorch-pypy", markers = "sys_platform == 'linux' and platform_machine != 'x86_64'"},
  { version = "^2.7", source  = "pytorch-cpu", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
  
  # Windows
  { version = "^2.7", source  = "pytorch-pypy", markers = "sys_platform != 'darwin' and sys_platform != 'linux'"},
    
]

torchvision = [
  # MacOS
  { version = "==0.17.2", source="pytorch-pypy", markers = "sys_platform == 'darwin' and platform_machine == 'x86_64'"},
  { version = "^0.22", source="pytorch-pypy", markers = "sys_platform == 'darwin' and platform_machine == 'arm64'"},

  #Linux
  { version = "^0.22", source="pytorch-pypy", markers = "sys_platform == 'linux' and platform_machine != 'x86_64'"},
  { version = "^0.22", source="pytorch-cpu", markers = "sys_platform == 'linux' and platform_machine == 'x86_64'"},
  
  # Windows
  { version = "^0.22", source  = "pytorch-pypy", markers = "sys_platform != 'darwin' and sys_platform != 'linux'"},
]


[tool.poetry]
package-mode = false

[[tool.poetry.source]]
name     = "pytorch-pypy"
priority = "primary"
url      = "https://pypi.org/simple/"


[[tool.poetry.source]]
name     = "pytorch-cpu"
priority = "explicit"
url      = "https://download.pytorch.org/whl/cpu"

[tool.poetry.scripts]
build = "poetry run pyinstaller --onefile --name flow-docling --noconfirm --upx-dir='$(which upx | xargs dirname)' --collect-all docling_parse main.py"

[build-system]
requires     = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
